--- a/front/index.html
+++ b/front/index.html
@@ -125,7 +125,7 @@
           <div class="flex flex-wrap items-center gap-3">
             <label class="inline-flex items-center gap-2 rounded-2xl border border-white/10 bg-white/5 px-3 py-2 text-sm text-slate-200">
               <input id="aireChk" type="checkbox" class="h-4 w-4 accent-indigo-500" />
-              Aire
+              Aire Acondicionado
             </label>
 
             <label class="inline-flex items-center gap-2 rounded-2xl border border-white/10 bg-white/5 px-3 py-2 text-sm text-slate-200">
